# trophysics

./: .gitignore  README.md
c_libraries/: README.md
c_libraries/config/: makefile  sudo_update_libtlib.fish
c_libraries/include/: t_numerics.h  t_programcontrol.h
c_libraries/src/: t_array.c  t_matrix.c  t_numerics_intern.h  t_programcontrol.c  tn_analysis.c  tn_linalg.c  tn_ode.c  tn_stats.c
latex/: Fehlerformeln.tex  README.md  Titelseite_Praktikum.tex  Vollmacht_Einsicht.tex  error_formulas.tex  settings.sty
latex/article_template/: articlesettings.sty  bibliographyoptions.tex  main.tex  makefile
latex/beamer_template/: beamersettings.sty  main.tex  makefile
latex/scrbook_template/: appendix.tex  bibliographyoptions.tex  booksettings.sty  main.tex
python_modules/: README.md
python_modules/io_utils/: .env.template  makefile  pyproject.toml
python_modules/io_utils/io_utils/: __init__.py
python_modules/io_utils/io_utils/ai/: __init__.py  _ai_request.py
python_modules/io_utils/io_utils/api/: __init__.py  _load_api.py
python_modules/io_utils/io_utils/cli/: __init__.py  _input.py  _loading.py  _projectscript_helper.py  shell_scripts.py
python_modules/io_utils/io_utils/files/: __init__.py  _create_files.py  _edit_files.py  _find_files.py
python_modules/io_utils/io_utils/plot/: __init__.py  figure.py
python_modules/io_utils/io_utils/text/: __init__.py  text.py
python_modules/phydesim/phydesim/: __init__.py  cli.py
python_modules/phydesim/phydesim/rk_lib/: __init__.py
python_modules/phydesim/phydesim/rk_lib/_cython/: __init__.py  _core.pyx
python_modules/phydesim/phydesim/rk_lib/_python/: __init__.py  _pycore.py
python_modules/tmlearn/: makefile  pyproject.toml
python_modules/tmlearn/tmlearn/: __init__.py
python_modules/tmlearn/tmlearn/linregress/: __init__.py  linregress.py
python_modules/trophysics/: MANIFEST.in  README.md  makefile  pyproject.toml  setup.py
python_modules/trophysics/tests/: test_integrate.py
python_modules/trophysics/trophysics/: __init__.py  cli.py
python_modules/trophysics/trophysics/integrate/_cython/: _core.c  _core.pyx
scripts/: clean_beamer.py
templates/: .env.template  makefile  setup.py
tests/: dependencies.txt  makefile  test.c  test.ipynb  test.py  test.swift  test.tex
wiki/: README.md  tipps_c.md  tipps_git.md  tipps_latex.md  tipps_python.md  tipps_terminal.md
